tests/cn/accesses_on_spec/clientfile.c.test
return code: 1
./clientfile.exec.c:78:12: error: use of undeclared identifier 'myval'
   78 |   CN_STORE(myval, 1);
      |            ^
./clientfile.exec.c:78:12: error: use of undeclared identifier 'myval'
./clientfile.exec.c:78:12: error: use of undeclared identifier 'myval'
./clientfile.exec.c:78:12: error: use of undeclared identifier 'myval'
./clientfile.exec.c:80:16: error: call to undeclared function 'foo'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   80 |     __cn_ret = foo(1);
      |                ^
./clientfile.exec.c:99:11: error: use of undeclared identifier 'myval'
   99 |   return &myval;
      |           ^
./clientfile.exec.c:104:12: error: use of undeclared identifier 'myval'
  104 |   memcpy((&myval), ptr, sizeof(signed int));
      |            ^
7 errors generated.
Failed to compile 'clientfile.exec.c'.